--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,7 +319,7 @@ body {
   width: 100%;
   height: 1px;
   background: var(--text-color-dark);
-  margin-top: 2px;
+  margin-bottom: 5px;
 }
 
 .sidebar .avatar-box {
@@ -362,7 +362,8 @@ body {
   padding: 10px;
   border-radius: 8px;
   /* Optional: Adjust the border radius as needed */
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 5px;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -427,8 +428,10 @@ body {
 .contact-info {
   display: flex;
   align-items: center;
-  gap: 5px;
-  margin-bottom: 10px;
+  gap: 1px;
+  /* Reduce gap to bring elements closer */
+  margin-bottom: 0px;
+  /* Reduce margin to bring contacts closer */
 }
 
 .contact-info ion-icon {
@@ -440,9 +443,12 @@ body {
 }
 
 .contact-link {
+  margin-bottom: 20px;
+  /* Reduce margin to bring contacts closer */
   font-size: var(--font-size-small);
   color: var(--text-color-light);
 }
+
 
 #first {
   color: lightslategray;
