--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ body {
   /* Fix the sidebar to the left side */
   margin-top: 60px;
   margin-left: 150px;
-  height: 80vh;
+
   /* Full height of the viewport */
   width: 250px;
   /* Set the width of the sidebar */
@@ -147,7 +147,7 @@ body {
   margin-left: 420px;
   overflow: hidden;
   width: 900px;
-  flex-grow: 1;
+
   background: var(--bg-gradient-onyx);
   border-right: 1px solid var(--jet);
   box-shadow: var(--shadow-1);
@@ -590,5 +590,19 @@ article.active {
 
   100% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .intro-text {
+    font-size: 5vw;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .main-content,
+  .sidebar {
+    display: block;
   }
 }
